# cooking-contracts

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  NOTICE  README.md
contracts/flambe/: Cargo.toml
contracts/flambe/src/: contract.rs  error.rs  execute.rs  functions.rs  lib.rs  query.rs  reply.rs  state.rs
contracts/flambe_factory/: Cargo.toml
contracts/flambe_factory/src/: contract.rs  error.rs  execute.rs  helper.rs  lib.rs  query.rs  state.rs
deploy/: Cargo.toml
deploy/config/: asd.json  example_msg_init.json  testnet-injective.json  testnet-osmosis.json
deploy/src/: data.rs  lib.rs
package/: Cargo.toml
package/src/: flambe.rs  flambe_factory.rs  lib.rs  ratatouille.rs  ratatouille_factory.rs
template/: add_template.py  add_template.sh
template/contract/: Cargo.toml
template/contract/src/: contract.rs  lib.rs  response.rs
template/package/: package.rs
test/: Cargo.toml
test/src/: helpers.rs  lib.rs  mock_dojo.rs  mock_gamm.rs
test/src/flambe/: integration_test.rs  mod.rs
test/src/flambe_factory/: helpers.rs  integration_test.rs  integration_test_old.rs  mod.rs
