[package]
name = "ratatouille-test"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
dojoswap = { workspace = true } 
rhaki-cw-plus = { workspace = true, features = ["multi-test", "injective"] }
ratatouille-pkg = { workspace = true }
flambe = { workspace = true }
flambe-factory = { workspace = true }
anyhow = "1.0.82"
strum = "0.21.0"
injective-std = { workspace = true }
prost = "0.12.4"
cw20 = "1.1.2"
cw20-base = "1.1.2"
