[package]
name              = "flambe"
version           = { workspace = true }
authors           = { workspace = true }
edition           = { workspace = true }
exclude           = ["contract.wasm", "hash.txt"]

[lib]
crate-type        = ["cdylib", "rlib"]

[profile.release]
opt-level         = 3
debug             = false
rpath             = false
lto               = true
debug-assertions  = false
codegen-units     = 1
panic             = 'abort'
incremental       = false
overflow-checks   = true

[features]
backtraces        = ["cosmwasm-std/backtraces"]
library           = []

[dependencies]
astroport         = { workspace = true }

cosmwasm-schema   = { workspace = true }
cosmwasm-std      = { workspace = true }
cw-storage-plus   = { workspace = true }
enum-repr         = { workspace = true }
osmosis-std       = { workspace = true }
prost             = { workspace = true }
rhaki-cw-plus     = { workspace = true }
ratatouille-pkg   = { workspace = true }
schemars          = { workspace = true }
serde             = { workspace = true }
thiserror         = { workspace = true }

[dev-dependencies]
cw-multi-test     = { workspace = true }
